--- a/index.html
+++ b/index.html
@@ -51,99 +51,101 @@
     </div>
   </section>
 
-<!-- ______________________________GREETINGS___________________________________ -->
-<section class="backgroundo-sec">
+  <!-- ______________________________GREETINGS___________________________________ -->
+  <section class="backgroundo-sec">
 
-  <section class="greeting">
-    <div class="container-fluid container-new">
-      <div><img class="greeting-pic1 greeting-pic greeting-pic-css" src="images/profile-1_1.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic2 greeting-pic greeting-pic-css" src="images/profile-1_2.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic3 greeting-pic greeting-pic-css" src="images/profile-1_3.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic4 greeting-pic greeting-pic-css" src="images/profile-2_1.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic5 greeting-pic greeting-pic-css" src="images/profile-2_2.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic6 greeting-pic greeting-pic-css" src="images/profile-2_3.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic7 greeting-pic greeting-pic-css" src="images/profile-3_1.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic8 greeting-pic greeting-pic-css" src="images/profile-3_2.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic9 greeting-pic greeting-pic-css" src="images/profile-3_3.png" alt="Profile_picture"></div>
-      <div><img class="greeting-pic-not" src="images/untitled.jpg" alt="Profile_picture"></div>
-      <div class="row">
-        <div class="col-lg-6">
-          <section class="hole">
-          </section>
-        </div>
-        <div class="col-lg-6 main-div-hi">
-          <h2><span class="greeting-hi">Hi, </span><span class="greeting-iam">I am </span><span class="greeting-name"><br>Tomas,</span></h2>
-          <div class="greeting-who">
-            <h2 class="who">Engineer&nbsp;and </h2>
-            <div class="div-who">
-              <h2 class="who2">programmer.<h3 class="hope">(Wannabe... <i class="fa-regular fa-face-smile"></i>)</h3>
-              </h2>
+    <section class="greeting">
+      <div class="container-fluid container-new">
+        <div><img class="greeting-pic1 greeting-pic greeting-pic-css" src="images/profile-1_1.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic2 greeting-pic greeting-pic-css" src="images/profile-1_2.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic3 greeting-pic greeting-pic-css" src="images/profile-1_3.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic4 greeting-pic greeting-pic-css" src="images/profile-2_1.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic5 greeting-pic greeting-pic-css" src="images/profile-2_2.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic6 greeting-pic greeting-pic-css" src="images/profile-2_3.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic7 greeting-pic greeting-pic-css" src="images/profile-3_1.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic8 greeting-pic greeting-pic-css" src="images/profile-3_2.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic9 greeting-pic greeting-pic-css" src="images/profile-3_3.png" alt="Profile_picture"></div>
+        <div><img class="greeting-pic-not" src="images/untitled.jpg" alt="Profile_picture"></div>
+        <div class="row">
+          <div class="col-lg-6">
+            <section class="hole">
+            </section>
+          </div>
+          <div class="col-lg-6 main-div-hi">
+            <h2><span class="greeting-hi">Hi, </span><span class="greeting-iam">I am </span><span class="greeting-name"><br>Tomas,</span></h2>
+            <div class="greeting-who">
+              <h2 class="who">Engineer&nbsp;and </h2>
+              <div class="div-who">
+                <h2 class="who2">programmer.<h3 class="hope">(Wannabe... <i class="fa-regular fa-face-smile"></i>)</h3>
+                </h2>
+              </div>
             </div>
           </div>
         </div>
+
       </div>
-
-    </div>
-  </section>
+    </section>
 
 
 
-<section class="greeting-small section-main">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-6 greeting-picture align-items-center">
-          <img class="greeting-pic-small" src="images/profile-1.jpg" alt="Profile_picture">
-        </div>
-        <div class="col-lg-6 main-div-hi">
-          <h2 class="greeting-first"><span class="greeting-hi">Hi, </span><span class="greeting-iam">I am </span><span class="greeting-name">Tomas,</span></h2>
+    <section class="greeting-small section-main">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6 greeting-picture align-items-center">
+            <img class="greeting-pic-small" src="images/profile-1.jpg" alt="Profile_picture">
+          </div>
+          <div class="col-lg-6 main-div-hi">
+            <h2 class="greeting-first"><span class="greeting-hi">Hi, </span><span class="greeting-iam">I am </span><span class="greeting-name">Tomas,</span></h2>
 
-          <div class="greeting-who">
-            <h2 class="who">Engineer&nbsp;and </h2>
-            <div class="div-who">
-              <h2 class="who2">programmer.<h3 class="hope">(Wannabe... <i class="fa-regular fa-face-smile"></i>)</h3>
-              </h2>
+            <div class="greeting-who">
+              <h2 class="who">Engineer&nbsp;and </h2>
+              <div class="div-who">
+                <h2 class="who2">programmer.<h3 class="hope">(Wannabe... <i class="fa-regular fa-face-smile"></i></i>)</h3>
+                </h2>
+              </div>
             </div>
           </div>
         </div>
+
       </div>
-
-    </div>
-  </section>
+    </section>
 
 
 
-<!-- ______________________________ABOUT___________________________________ -->
+    <!-- ______________________________ABOUT___________________________________ -->
 
-  <section class="section-main opacity" id="about">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-9">
-          <h2 class="about-heading">About me</h2>
-          <p class="about-text">Mechanical Engineer with over 14
-            years’ experience in mechanical
-            components manufacturing field. Have
-            solid experience with 3D CAD design, good
-            understanding of engineering drawings
-            and metal fabrication processes, have
-            international working experience.</p>
-        </div>
-        <div class="col-lg-3 my-skills">
-          <h3 class="skills-heading">My skills</h3>
-          <ul class="skill-list">
-            <li>Critical thinking</li>
-            <li>Information research</li>
-            <li>Communication</li>
-            <li>Manufacturing</li>
-            <li>CAD/CAM Design</li>
-            <li>English - C1</li>
-          </ul>
+    <section class="section-main opacity" id="about">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-9">
+            <h2 class="about-heading">About me</h2>
+            <p class="about-text">I'm a mechanical engineer, CAD/CAM programmer with
+              over 14 years of professional experience,
+              currently on a quest to learn a
+              new skill in life - software development. I just finished the "front side" part of
+              <a class="course-link" href="https://www.udemy.com/course/the-complete-web-development-bootcamp/" target=”_blank”>courses</a>
+              I found on Udemy.com, and built this page as a challenge for myself. And, with the power
+              of targeted advertisement, I found out about Full-stack Academy '22! I'm really interested to find out more,
+              so please, feel free to contact me. <br>
+              <br>P.S. Dont judge this webpage too much. 😀 After all, it's my playground!</i>
+            </p>
+          </div>
+          <div class="col-lg-3 my-skills">
+            <h3 class="skills-heading">My skills</h3>
+            <ul class="skill-list">
+              <li>Critical thinking</li>
+              <li>Information research</li>
+              <li>Communication</li>
+              <li>CAD/CAM Design</li>
+              <li>English - C1</li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-</section>
-<!-- ______________________________EXPERIANCE___________________________________ -->
+  </section>
+  <!-- ______________________________EXPERIANCE___________________________________ -->
 
   <section class="section-main" id="experience">
     <div class="container-fluid container-sm">
@@ -238,87 +240,87 @@
     </div>
   </section>
 
-<!-- ______________________________HOBBIES___________________________________ -->
+  <!-- ______________________________HOBBIES___________________________________ -->
 
-<section class="backgroundo-sec2">
+  <section class="backgroundo-sec2">
 
-  <section class="section-main" id="hobbies">
+    <section class="section-main" id="hobbies">
 
-    <h2 class="hobbies-heading" id="about-waypoint1">Hobbies</h2>
+      <h2 class="hobbies-heading" id="about-waypoint1">Hobbies</h2>
 
-    <div id="hobbies-car" class="carousel slide opacity" data-bs-ride="false">
-      <div class="carousel-inner">
+      <div id="hobbies-car" class="carousel slide opacity" data-bs-ride="false">
+        <div class="carousel-inner">
 
-        <div class="carousel-item active container-fluid">
-          <div class="row align-items-center">
-            <div class="col-lg-6 hobbies-text-div">
-              <p class="hobbies-text">Marijampolė Board game club "Imperija" member and co-founder. <a class= "hobbies-fb" href="https://www.facebook.com/KlubasImperija" target=”_blank”><i class="fa-brands fa-square-facebook"></i></a></p>
+          <div class="carousel-item active container-fluid">
+            <div class="row align-items-center">
+              <div class="col-lg-6 hobbies-text-div">
+                <p class="hobbies-text">Marijampolė Board game club "Imperija" member and co-founder. <a class="hobbies-fb" href="https://www.facebook.com/KlubasImperija" target=”_blank”><i class="fa-brands fa-square-facebook"></i></a></p>
+              </div>
+              <div class="col-lg-6 hobbies-image-div">
+                <img class="hobbies-image img-responsive" src="images/board1.jpg" alt="boardgame-image">
+              </div>
             </div>
-            <div class="col-lg-6 hobbies-image-div">
-              <img class="hobbies-image img-responsive" src="images/board1.jpg" alt="boardgame-image">
+          </div>
+
+          <div class="carousel-item container-fluid">
+            <div class="row align-items-center">
+              <div class="col-lg-6 hobbies-text-div">
+                <p class="hobbies-text">Extreme sports is a passion that always was with me.</p>
+              </div>
+              <div class="col-lg-6 hobbies-image-div">
+                <img class="hobbies-image" src="images/kite1.jpg" alt="kitesurfing-image">
+              </div>
+            </div>
+          </div>
+
+          <div class="carousel-item container-fluid">
+            <div class="row align-items-center">
+              <div class="col-lg-6 hobbies-text-div">
+                <p class="hobbies-text">Running and working out in a gym is a great way to clear my mind.</p>
+              </div>
+              <div class="col-lg-6 hobbies-image-div">
+                <img class="hobbies-image" src="images/sports1.jpg" alt="sports-image">
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="carousel-item container-fluid">
-          <div class="row align-items-center">
-            <div class="col-lg-6 hobbies-text-div">
-              <p class="hobbies-text">Extreme sports is a passion that always was with me.</p>
-            </div>
-            <div class="col-lg-6 hobbies-image-div">
-              <img class="hobbies-image" src="images/kite1.jpg" alt="kitesurfing-image">
-            </div>
-          </div>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#hobbies-car" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
 
-        <div class="carousel-item container-fluid">
-          <div class="row align-items-center">
-            <div class="col-lg-6 hobbies-text-div">
-              <p class="hobbies-text">Running and working out in a gym is a great way to clear my mind.</p>
-            </div>
-            <div class="col-lg-6 hobbies-image-div">
-              <img class="hobbies-image" src="images/sports1.jpg" alt="sports-image">
-            </div>
-          </div>
-        </div>
+        <button class="carousel-control-next" type="button" data-bs-target="#hobbies-car" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
       </div>
+    </section>
 
-      <button class="carousel-control-prev" type="button" data-bs-target="#hobbies-car" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
 
-      <button class="carousel-control-next" type="button" data-bs-target="#hobbies-car" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-    </div>
+
+    <!-- ______________________________CONTACTS___________________________________ -->
+
+    <footer class="section-main" id="contacts">
+      <div class="container-fluid container-xs">
+        <div class="row">
+          <div class="col-lg-4 contacts-picture d-none d-lg-block d-xl-block">
+            <img class="contacts-image" src="images/profile-2.jpg" alt="dog-profile">
+          </div>
+          <div class="col-lg-8">
+            <h2 class="contacts-heading">Let's talk</h2>
+            <ul class="contacts-list">
+              <li class="list-text"><a href="mailto:tomas.blazys@yahoo.com"><i class="contacts-icon fa-solid fa-envelope"></i></a>tomas.blazys@yahoo.com</li>
+              <li class="list-text"><a href="tel:+37063707475"><i class="contacts-icon fa-solid fa-phone"></i></a>+370 637 07475</li>
+              <li><a target=”_blank” href="https://www.facebook.com/tomas.blazys"><i class="contacts-icon fa-brands fa-square-facebook"></i></a></li>
+              <li><a target=”_blank” href="https://www.linkedin.com/in/tomas-bla%C5%BEys-5bb05b231/"><i class="contacts-icon fa-brands fa-linkedin"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer">Tomas Blažys</p>
+      </div>
+    </footer>
   </section>
 
-
-
-<!-- ______________________________CONTACTS___________________________________ -->
-
-  <footer class="section-main" id="contacts">
-    <div class="container-fluid container-xs">
-      <div class="row">
-        <div class="col-lg-4 contacts-picture d-none d-lg-block d-xl-block">
-          <img class="contacts-image" src="images/profile-2.jpg" alt="dog-profile">
-        </div>
-        <div class="col-lg-8">
-          <h2 class="contacts-heading">Let's talk</h2>
-          <ul class="contacts-list">
-            <li class="list-text"><a href="mailto:tomas.blazys@yahoo.com"><i class="contacts-icon fa-solid fa-envelope"></i></a>tomas.blazys@yahoo.com</li>
-            <li class="list-text"><a href="tel:+37063707475"><i class="contacts-icon fa-solid fa-phone"></i></a>+370 637 07475</li>
-            <li><a target=”_blank” href="https://www.facebook.com/tomas.blazys"><i class="contacts-icon fa-brands fa-square-facebook"></i></a></li>
-            <li><a target=”_blank” href="https://www.linkedin.com/in/tomas-bla%C5%BEys-5bb05b231/"><i class="contacts-icon fa-brands fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <p class="footer">Tomas Blažys</p>
-    </div>
-  </footer>
-</section>
-
-<!-- ______________________________JAVASCRIPT___________________________________ -->
+  <!-- ______________________________JAVASCRIPT___________________________________ -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
